issue#1 - nav text is hard to read as black on dark pink

--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,9 @@ nav li {
 nav li:hover {
 	background-color: rgb(192, 23, 104);
 	text-shadow: 1px 1px 3px rgb(0, 0, 0);
+	color: #FFF;
 }
 
 /* ***********************************************************
-	
+
 *********************************************************** */
